# plume

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: ci.yml  pynwp_emulator.yml
cmake/: fortran_plugin.F90.in  fortran_plugin.cc.in  fortran_plugin.h.in  generate_plume_tags_fortran.cmake  plume-import.cmake.in  plume-plugin-interface.cmake
docs/: conf.py  index.rst  requirements.txt
docs/nwp_emulator/: api.rst  index.rst  installation.rst
examples/: CMakeLists.txt  example1.F90  example1.c  example1.cc  example2.F90  example2.cc  example3.F90  example3.cc  plugin_bar.cc  plugin_bar.h  plugin_foo.cc  plugin_foo.h  plume_config.yml  run_examples.sh.in
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  nwp_emulator.cc
src/nwp_emulator/: CMakeLists.txt  README.md  base_data_reader.h  config_reader.cc  config_reader.h  config_reader_funcs.cc  data_reader.h  grib_file_reader.cc  grib_file_reader.h  nwp_data_provider.cc  nwp_data_provider.h  nwp_definitions.h  nwp_emulator.cc  nwp_emulator_core.cc  nwp_emulator_core.h  nwp_emulator_pybind.cc
src/nwp_emulator/ui/: index.html  ui_launcher.py
src/nwp_emulator/ui/assets/css/: base.css  components.css  layout.css  map.css  responsive.css  setup.css  variables.css
src/nwp_emulator/ui/backend/: __init__.py
src/nwp_emulator/ui/backend/api/: __init__.py  request_parsers.py  response_builders.py  setup_routes.py
src/nwp_emulator/ui/backend/domain/: __init__.py  enums.py  errors.py  models.py
src/nwp_emulator/ui/backend/mappers/: __init__.py  session_mapper.py
src/nwp_emulator/ui/backend/services/: __init__.py  checks_service.py  emulator_runtime.py  emulator_worker.py  setup_service.py  source_service.py
src/nwp_emulator/ui/backend/storage/: __init__.py  in_memory_store.py  session_store.py
src/nwp_emulator/ui/backend/tests/: test_checks_service.py  test_emulator_runtime_execution.py  test_setup_routes_params.py  test_ui_launcher_endpoints.py  test_ui_launcher_workspace.py
src/nwp_emulator/ui/backend/validation/: __init__.py  grib_validators.py  setup_validators.py  yaml_validators.py
src/nwp_emulator/ui/js/: app.js  derived-fields.js  dom.js  run-controls.js  save-actions.js  setup-controls.js  state.js  tabs.js  upload-handlers.js
src/nwp_emulator/ui/js/map/: map-controls.js  map-renderer-plotly.js
src/plume/: CMakeLists.txt  Configurable.cc  Configurable.h  Kernel.cc  Kernel.h  Manager.cc  Manager.h  ManagerConfig.h  Negotiator.cc  Negotiator.h  Plugin.cc  Plugin.h  PluginConfig.h  PluginCore.cc  PluginCore.h  PluginDecision.h  PluginHandler.cc  PluginHandler.h  PlumeState.cc  PlumeState.h  PlumeTag.cc  PlumeTag.h  Protocol.cc  Protocol.h  TagDefinitions.def  plume.h  plume_config.h.in  plume_version.cc.in  plume_version.h.in  utils.h
src/plume/api/: CMakeLists.txt  plume.F90  plume.cc  plume.h  plume_data.F90  plume_lib.F90  plume_manager.F90  plume_protocol.F90  plume_state.F90  plume_utils.F90
src/plume/coupling/: README.md  WriteAuthorisation.cc  WriteAuthorisation.h  WriteBackKey.h  WriteBackLedger.cc  WriteBackLedger.h  WriteBackPolicy.cc  WriteBackPolicy.h  WriteBackState.h
src/plume/data/: DataChecker.cc  DataChecker.h  FieldAccess.cc  FieldAccess.h  FieldProvider.cc  FieldProvider.h  ModelData.cc  ModelData.h  ModelDataView.h  Parameter.cc  Parameter.h  ParameterCatalogue.cc  ParameterCatalogue.h  ParameterType.h  ParameterValue.cc  ParameterValue.h  README.md
src/pynwp_emulator/: CMakeLists.txt  README.md  __init__.py  nwp_emulator.py
src/pynwp_emulator/_internal/: __init__.py
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt  plugin_test_api.cc  plugin_test_api.h  plugin_test_fapi.F90  plugin_test_fapi.cc  plugin_test_fapi.h  plugin_writeback_api.cc  plugin_writeback_api.h  plugin_writeback_fapi.F90  plugin_writeback_fapi.cc  plugin_writeback_fapi.h  should_not_compile_fapi.F90  test_api_utils.h  test_atlas_field_lifetime.F90  test_data_api.F90  test_data_api.cc  test_lib_api.F90  test_lib_api.cc  test_manager_api.F90  test_manager_api.cc  test_params_api.F90  test_params_api.cc  test_state_api.F90  test_state_api.cc  test_writeback_api.cc  test_writeback_fapi.F90
tests/core/: CMakeLists.txt  ManagerTestAccess.h  should_not_compile_writeparam.cc  simple_atlas_plugin.cc  simple_atlas_plugin.h  simple_config_plugin.cc  simple_config_plugin.h  simple_plugin.cc  simple_plugin.h  test_atlas_model_data.cc  test_catalogue.cc  test_configs.cc  test_kernel.cc  test_manager.cc  test_manager_json.cc  test_model_data.cc  test_model_data_view_enforcement.cc  test_negotiator.cc  test_parameter.cc  test_plugin.cc  test_plugin_params.cc  test_plugin_writeback.cc  test_plugincore.cc  test_protocol.cc  test_update_strategies.cc  test_writeback_atlas.cc  test_writeback_ledger.cc  test_writeback_scope.cc
tests/core/plugins/: simple_atlas_plugin.cc  simple_plugin.cc  simple_plugin.h  skipwrite_plugin.cc  writeback_plugin.cc  writeback_plugin.h
tests/nwp_emulator/: CMakeLists.txt  nwp_emulator_plugin.cc  nwp_emulator_plugin.h  test_config_reader.cc  test_core_parity.cc  test_grib_reader.cc  test_nwp_bindings.py
tests/nwp_emulator/data/: invalid_config.yml  plume_config.yml  plume_config_dp.yml  plume_config_simple.yml  plume_config_sp.yml  valid_config.yml
tests/pynwp_emulator/: CMakeLists.txt  test_nwp_emulator.py  test_nwp_emulator_integration.py  test_nwp_emulator_mpi.py
